--- a/localisation/english/MD_focus_EU_l_english.yml
+++ b/localisation/english/MD_focus_EU_l_english.yml
@@ -336,7 +336,7 @@
  EU_parliament_mini_PG_conservatism_loc_key: "[EU_parliament_PG_conservatism_icon] EPP-ED: [?global.MEP_PG_conservatism|C0] §CMEP§!"
  EU_parliament_mini_PG_liberalism_loc_key: "[EU_parliament_PG_liberalism_icon] ELDR: [?global.MEP_PG_liberalism|C0] §CMEP§!"
  EU_parliament_mini_PG_socialism_loc_key: "[EU_parliament_PG_socialism_icon] PES: [?global.MEP_PG_socialism|C0] §CMEP§!"
- EU_parliament_mini_PG_Communist-State_loc_key: "[EU_parliament_PG_Communist-State_icon] Communists: [?global.MEP_PG_Communist-State|C0] §CMEP§!"
+ EU_parliament_mini_PG_Communist-State_loc_key: "[EU_parliament_PG_Communist-State_icon] AOC: [?global.MEP_PG_Communist-State|C0] §CMEP§!"
  EU_parliament_mini_PG_anarchist_communism_loc_key: "[EU_parliament_PG_anarchist_communism_icon] EACL: [?global.MEP_PG_anarchist_communism|C0] §CMEP§!"
  EU_parliament_mini_PG_Conservative_loc_key: "[EU_parliament_PG_Conservative_icon] AR: [?global.MEP_PG_Conservative|C0] §CMEP§!"
  EU_parliament_mini_PG_Autocracy_loc_key: "[EU_parliament_PG_Autocracy_icon] AA: [?global.MEP_PG_Autocracy|C0] §CMEP§!"
