--- a/localisation/simp_chinese/MD_focus_EU_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_EU_l_simp_chinese.yml
@@ -2848,30 +2848,30 @@
  EU_legend_text: "§Y列表§!"
  EU_legend_text_tt: "蓝色 - [EU_parliament_PG_conservatism_icon] 欧洲人民党-欧洲民主党\n黄色 - [EU_parliament_PG_liberalism_icon] 欧洲自由民主改革党\n红色 - [EU_parliament_PG_socialism_icon] 欧洲社会党"
  EU_political_groups_text_tt: "下面是欧洲议会。欧洲议会由直接选举产生的欧洲议会议员或单纯欧洲议会议员组成。"
- EU_parliament_mini_PG_Western_Autocracy_loc_key: "[EU_parliament_PG_Western_Autocracy_icon] 亲西方独裁者联盟：[?global.MEP_PG_Western_Autocracy|C0]§C欧盟议会议员§!"
- EU_parliament_mini_PG_conservatism_loc_key: "[EU_parliament_PG_conservatism_icon] 欧洲人民党-欧洲民主党:[?global.MEP_PG_conservatism|C0]§C欧洲议会议员§!"
- EU_parliament_mini_PG_liberalism_loc_key: "[EU_parliament_PG_liberalism_icon] 欧洲自由民主和改革党：[?global.MEP_PG_liberalism|C0]§C欧洲议会议员§!"
- EU_parliament_mini_PG_socialism_loc_key: "[EU_parliament_PG_socialism_icon] 欧洲社会主义党：[?global.MEP_PG_socialism|C0]§C欧洲议会议员§!"
- EU_parliament_mini_PG_Communist-State_loc_key: "[EU_parliament_PG_Communist-State_icon] 共产主义者：[?global.MEP_PG_Communist-State|C0]§C欧洲议会议员§!"
- EU_parliament_mini_PG_anarchist_communism_loc_key: "[EU_parliament_PG_anarchist_communism_icon] 欧洲反资本主义左派：[?global.MEP_PG_anarchist_communism|C0]§C欧洲议会议员§!"
- EU_parliament_mini_PG_Conservative_loc_key: "[EU_parliament_PG_Conservative_icon] 反动主义者联盟：[?global.MEP_PG_Conservative|C0]§C欧盟议会议员§!"
- EU_parliament_mini_PG_Autocracy_loc_key: "[EU_parliament_PG_Autocracy_icon] 专制主义者联盟：[?global.MEP_PG_Autocracy|C0]§C欧盟议会议员§!"
- EU_parliament_mini_PG_Mod_Vilayat_e_Faqih_loc_key: "[EU_parliament_PG_Mod_Vilayat_e_Faqih_icon] 温和什叶派革命者联盟：[?global.MEP_PG_Mod_Vilayat_e_Faqih|C0]§C欧盟议会议员§!"
- EU_parliament_mini_PG_Vilayat_e_Faqih_loc_key: "[EU_parliament_PG_Vilayat_e_Faqih_icon] 强硬什叶派革命者联盟：[?global.MEP_PG_Vilayat_e_Faqih|C0]§C欧盟议会议员§!"
- EU_parliament_mini_PG_Kingdom_loc_key: "[EU_parliament_PG_Kingdom_icon] 瓦哈比君主主义者联盟：[?global.MEP_PG_Kingdom|C0]§C欧盟议会议员§!"
- EU_parliament_mini_PG_Caliphate_loc_key: "[EU_parliament_PG_Caliphate_icon] 圣战萨拉菲主义者联盟：[?global.MEP_PG_Caliphate|C0]§C欧盟议会议员§!"
- EU_parliament_mini_PG_Neutral_Muslim_Brotherhood_loc_key: "[EU_parliament_PG_Neutral_Muslim_Brotherhood_icon] 温和伊斯兰主义者联盟：[?global.MEP_PG_Neutral_Muslim_Brotherhood|C0]§C欧盟议会议员§!"
- EU_parliament_mini_PG_Neutral_Autocracy_loc_key: "[EU_parliament_PG_Neutral_Autocracy_icon] 不结盟专制主义者联盟：[?global.MEP_PG_Neutral_Autocracy|C0]§C欧盟议会议员§!"
- EU_parliament_mini_PG_Neutral_conservatism_loc_key: "[EU_parliament_PG_Neutral_conservatism_icon] 欧洲国家联盟：[?global.MEP_PG_Neutral_conservatism|C0]§C欧盟议会议员§!"
- EU_parliament_mini_PG_oligarchism_loc_key: "[EU_parliament_PG_oligarchism_icon] 寡头政治联盟：[?global.MEP_PG_oligarchism|C0]§C欧盟议会议员§!"
- EU_parliament_mini_PG_Neutral_Libertarian_loc_key: "[EU_parliament_PG_Neutral_Libertarian_icon] 自由意志主义者联盟：[?global.MEP_PG_Neutral_Libertarian|C0]§C欧盟议会议员§!"
- EU_parliament_mini_PG_Neutral_green_loc_key: "[EU_parliament_PG_Neutral_green_icon] 绿党/欧洲自由联盟：[?global.MEP_PG_Neutral_green|C0]§C欧洲议会议员§!"
- EU_parliament_mini_PG_neutral_Social_loc_key: "[EU_parliament_PG_neutral_Social_icon] 社会民主联盟：[?global.MEP_PG_neutral_Social|C0]§C欧盟议会议员§!"
- EU_parliament_mini_PG_Neutral_Communism_loc_key: "[EU_parliament_PG_Neutral_Communism_icon] 欧洲联合左派/北欧绿党左派：[?global.MEP_PG_Neutral_Communism|C0]§C欧盟议会议员§!"
- EU_parliament_mini_PG_Nat_Populism_loc_key: "[EU_parliament_PG_Nat_Populism_icon] 欧洲民主与多样性：[?global.MEP_PG_Nat_Populism|C0]§C欧盟议会议员§!"
- EU_parliament_mini_PG_Nat_Fascism_loc_key: "[EU_parliament_PG_Nat_Fascism_icon] 法西斯联盟：[?global.MEP_PG_Nat_Fascism|C0]§C欧盟议会议员§!"
- EU_parliament_mini_PG_Nat_Autocracy_loc_key: "[EU_parliament_PG_Nat_Autocracy_icon] 欧洲联盟军事参谋部：[?global.MEP_PG_Nat_Autocracy|C0]§C欧盟议会议员§!"
- EU_parliament_mini_PG_Monarchist_loc_key: "[EU_parliament_PG_Monarchist_icon] 君主主义者联盟：[?global.MEP_PG_Monarchist|C0]§C欧盟议会议员§!"
+ EU_parliament_mini_PG_Western_Autocracy_loc_key: "[EU_parliament_PG_Western_Autocracy_icon] APWA：[?global.MEP_PG_Western_Autocracy|C0]§C欧盟议员§!"
+ EU_parliament_mini_PG_conservatism_loc_key: "[EU_parliament_PG_conservatism_icon] EPP-ED:[?global.MEP_PG_conservatism|C0]§C欧盟议员§!"
+ EU_parliament_mini_PG_liberalism_loc_key: "[EU_parliament_PG_liberalism_icon] ELDR：[?global.MEP_PG_liberalism|C0]§C欧盟议员§!"
+ EU_parliament_mini_PG_socialism_loc_key: "[EU_parliament_PG_socialism_icon] PES：[?global.MEP_PG_socialism|C0]§C欧盟议员§!"
+ EU_parliament_mini_PG_Communist-State_loc_key: "[EU_parliament_PG_Communist-State_icon] AOC：[?global.MEP_PG_Communist-State|C0]§C欧盟议员§!"
+ EU_parliament_mini_PG_anarchist_communism_loc_key: "[EU_parliament_PG_anarchist_communism_icon] EACL：[?global.MEP_PG_anarchist_communism|C0]§C欧盟议员§!"
+ EU_parliament_mini_PG_Conservative_loc_key: "[EU_parliament_PG_Conservative_icon] AR：[?global.MEP_PG_Conservative|C0]§C欧盟议员§!"
+ EU_parliament_mini_PG_Autocracy_loc_key: "[EU_parliament_PG_Autocracy_icon] AA：[?global.MEP_PG_Autocracy|C0]§C欧盟议员§!"
+ EU_parliament_mini_PG_Mod_Vilayat_e_Faqih_loc_key: "[EU_parliament_PG_Mod_Vilayat_e_Faqih_icon] AMSR：[?global.MEP_PG_Mod_Vilayat_e_Faqih|C0]§C欧盟议员§!"
+ EU_parliament_mini_PG_Vilayat_e_Faqih_loc_key: "[EU_parliament_PG_Vilayat_e_Faqih_icon] AHSR：[?global.MEP_PG_Vilayat_e_Faqih|C0]§C欧盟议员§!"
+ EU_parliament_mini_PG_Kingdom_loc_key: "[EU_parliament_PG_Kingdom_icon] AWM：[?global.MEP_PG_Kingdom|C0]§C欧盟议员§!"
+ EU_parliament_mini_PG_Caliphate_loc_key: "[EU_parliament_PG_Caliphate_icon] ASM：[?global.MEP_PG_Caliphate|C0]§C欧盟议员§!"
+ EU_parliament_mini_PG_Neutral_Muslim_Brotherhood_loc_key: "[EU_parliament_PG_Neutral_Muslim_Brotherhood_icon] AMI：[?global.MEP_PG_Neutral_Muslim_Brotherhood|C0]§C欧盟议员§!"
+ EU_parliament_mini_PG_Neutral_Autocracy_loc_key: "[EU_parliament_PG_Neutral_Autocracy_icon] ANAA：[?global.MEP_PG_Neutral_Autocracy|C0]§C欧盟议员§!"
+ EU_parliament_mini_PG_Neutral_conservatism_loc_key: "[EU_parliament_PG_Neutral_conservatism_icon] UEN：[?global.MEP_PG_Neutral_conservatism|C0]§C欧盟议员§!"
+ EU_parliament_mini_PG_oligarchism_loc_key: "[EU_parliament_PG_oligarchism_icon] AOS：[?global.MEP_PG_oligarchism|C0]§C欧盟议员§!"
+ EU_parliament_mini_PG_Neutral_Libertarian_loc_key: "[EU_parliament_PG_Neutral_Libertarian_icon] AOL：[?global.MEP_PG_Neutral_Libertarian|C0]§C欧盟议员§!"
+ EU_parliament_mini_PG_Neutral_green_loc_key: "[EU_parliament_PG_Neutral_green_icon] G/EFA：[?global.MEP_PG_Neutral_green|C0]§C欧盟议员§!"
+ EU_parliament_mini_PG_neutral_Social_loc_key: "[EU_parliament_PG_neutral_Social_icon] AOSD：[?global.MEP_PG_neutral_Social|C0]§C欧盟议员§!"
+ EU_parliament_mini_PG_Neutral_Communism_loc_key: "[EU_parliament_PG_Neutral_Communism_icon] G/NGL：[?global.MEP_PG_Neutral_Communism|C0]§C欧盟议员§!"
+ EU_parliament_mini_PG_Nat_Populism_loc_key: "[EU_parliament_PG_Nat_Populism_icon] EDD：[?global.MEP_PG_Nat_Populism|C0]§C欧盟议员§!"
+ EU_parliament_mini_PG_Nat_Fascism_loc_key: "[EU_parliament_PG_Nat_Fascism_icon] AoF：[?global.MEP_PG_Nat_Fascism|C0]§C欧盟议员§!"
+ EU_parliament_mini_PG_Nat_Autocracy_loc_key: "[EU_parliament_PG_Nat_Autocracy_icon] EUMS：[?global.MEP_PG_Nat_Autocracy|C0]§C欧盟议员§!"
+ EU_parliament_mini_PG_Monarchist_loc_key: "[EU_parliament_PG_Monarchist_icon] AoM：[?global.MEP_PG_Monarchist|C0]§C欧盟议员§!"
  office_occupied_tt: "职位目前未被其他欧盟成员国占据"
  rej_vote_tt: "§C欧盟§!人口%§R否决§!：[?global.var_EUpopRatioNo|%-]"
  EU_parliament_is_in_session_tt: "欧洲议会目前正在审议一个议程项目"
