idea, decision and oob

--- a/localisation/english/MD_focus_HKG_l_english.yml
+++ b/localisation/english/MD_focus_HKG_l_english.yml
@@ -355,6 +355,9 @@
  hongkong_news.4.d: "Established in 1994 by a group of pro-Taiwan, pro-democracy and pro-business politicians, the 123 Democratic Alliance was dissolved because lacking of financial support from the Taiwan government, after the Kuomintang's defeat in its presidential election."
  hongkong_news.4.a: "A good news, isn't it?"
  hongkong_news.4.b: "Well...Got it."
+ hongkong_news.5.t: "SARS outbreak in Hong Kong"
+ hongkong_news.5.d: "China Mainland"
+ hongkong_news.5.a: "Oh damn..."
  #Opinion Modifier
  HKG_european_bussiness_opinion: "Improve Trade with European Bussinessmen"
  HKG_chinese_entrepreneurs_opinion: "Improve Trade with Our Mainland Entrepreneurs"
