prepare serbia for patch

--- a/localisation/english/MD_focus_SER_l_english.yml
+++ b/localisation/english/MD_focus_SER_l_english.yml
@@ -1250,6 +1250,27 @@ Cat_utility_vehicle: "Utility Vehicle"
  SerbiaFocus.16.d: "They don't want to invest in us."
  SerbiaFocus.16.a: "Ugh."
 
+
+ ser_invest.1.t: "Serbia Asks For Investments!"
+ ser_invest.1.d: "Serbia asks us to invest in them should we agree?"
+ ser_invest.1.a: "Sure!"
+ ser_invest.1.b: "Sorry, no."
+ ser_invest.2.t: "[FROM.GetNamewithFlag] Has Agreed To Invest In Us"
+ ser_invest.2.d: "[FROM.GetNamewithFlag] government has agreed to invest in our country! This will accelerate the growth of our economy!"
+ ser_invest.2.a: "Good"
+ ser_invest.3.t: "[FROM.GetNamewithFlag] Has Agreed To Invest In Us"
+ ser_invest.3.d: "[FROM.GetNamewithFlag] government has agreed to invest in our country! This will accelerate the growth of our economy!"
+ ser_invest.3.a: "Good"
+ ser_invest.4.t: "[FROM.GetNamewithFlag] Has Agreed To Invest In Us"
+ ser_invest.4.d: "[FROM.GetNamewithFlag] government has agreed to invest in our country! This will accelerate the growth of our economy!"
+ ser_invest.4.a: "Good"
+ ser_invest.5.t: "[FROM.GetNamewithFlag] refused To Invest In Us"
+ ser_invest.5.d: "[FROM.GetNamewithFlag] government has refused to invest in our country"
+ ser_invest.5.a: "Sad"
+ ser_invest.6.t: "[FROM.GetNamewithFlag] Has Agreed To Invest In Us"
+ ser_invest.6.d: "[FROM.GetNamewithFlag] government has agreed to invest in our country! This will accelerate the growth of our economy!"
+ ser_invest.6.a: "Good"
+
  #Democratic Parties
 
  SER_free_elections: "Amendments in the Election Law"
