--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -688,7 +688,7 @@
  STATE_687: "Khabarovsk"
  STATE_688: "Yakutia"
  STATE_689: "Chukotka"
- STATE_690: "Kuril Islands"
+ STATE_690: "North Kuril Islands"
  STATE_691: "Sakhalin"
  STATE_692: "Primorye"
  STATE_693: "Donetsk"
@@ -1166,3 +1166,4 @@
  STATE_1165: "Menaka"
  STATE_1166: "Kayes"
  STATE_1167: "Ansongo"
+ STATE_1168: "South Kuril Islands"
