--- a/localisation/english/MD_focus_SOV_l_english.yml
+++ b/localisation/english/MD_focus_SOV_l_english.yml
@@ -677,7 +677,7 @@
  SOV_secure_desert_territories_desc: "Finally, our ambitions in Asia were satisfied. The time has come to engage in the full integration of these lands"
  SOV_expand_pacific_naval_presence: "Expand Pacific Naval Presence"
  SOV_expand_pacific_naval_presence_desc: "By expanding the shipbuilding industry in the Far East we can develop the region and empower our ambitions in the Pacific."
- SOV_cede_the_kuril_islands: "Cede the Kuril Islands"
+ SOV_cede_the_kuril_islands: "Cede the South Kuril Islands"
  SOV_cede_the_kuril_islands_desc: ""
  SOV_russo_japanese_alliance: "Russo-Japanese Alliance"
  SOV_russo_japanese_alliance_desc: ""
@@ -4401,8 +4401,8 @@
  SOV_transfer_state_shares_to_pension_funds_desc: "To improve the standard of living, as well as the life expectancy of our citizens, it is necessary to transfer blocks of shares owned by the state to the Russian Pension Fund with the establishment of restrictions on the voting of these shares."
  SOV_question_of_chechnya: "Liberate Chechen people"
  SOV_question_of_chechnya_desc: "Our past government illegally attacked and seized Chechnya. It is time to liberate the Chechen people."
- SOV_question_of_ownership_of_kuril_islands: "Question of Ownership of the Kuril Islands"
- SOV_question_of_ownership_of_kuril_islands_desc: "The question of the ownership of the Kuril Islands has been an issue since the end of World War II. Japan does not recognize them as our territory, but now we are ready to come to an agreement with them on this issue."
+ SOV_question_of_ownership_of_kuril_islands: "Question of Ownership of the South Kuril Islands"
+ SOV_question_of_ownership_of_kuril_islands_desc: "The question of the ownership of the South Kuril Islands has been an issue since the end of World War II. Japan does not recognize them as our territory, but now we are ready to come to an agreement with them on this issue."
  SOV_contract_service: "Contract Service"
  SOV_contract_service_desc: "It is necessary to turn the army into a modern institution capable of fully ensuring Russia's security, to abolish forced conscription, to switch to a contract system of forming the armed forces, to significantly reduce the number of the armed forces and to equip them with modern weapons and equipment."
 
@@ -4427,7 +4427,7 @@
  SOV_elected_navalny_TT: "§YWe've already chosen Navalny§!"
  SOV_from_center_TT: "Unlocks decisions of §YFrom Center to Regions!§!"
  SOV_FSS_TT: "§YFSS will be transformed into the Federal Counterintelligence Service§!"
- SOV_kurils_TT: "The §Ghigher our relations§! with §YJapan§!, the greater the chance that it will recognize the §YKuril Islands§! as §Your territory§!"
+ SOV_kurils_TT: "The §Ghigher our relations§! with §YJapan§!, the greater the chance that it will recognize the §YSouth Kuril Islands§! as §Your territory§!"
  SOV_usr_check_tt: "§YThe United States of Russia§! will be §Ycreated§!, new regional entities will appear instead of national republics: §Y[URA.GetNameWithFlag]§! §Y[SIB.GetNameWithFlag]§! §Y[FAR.GetNameWithFlag]§! §Y[KUB.GetNameWithFlag]§! §Y[GOR.GetNameWithFlag]§!"
  SOV_subjects_check_tt: "As long as you don't have §YSubjects of Federation§!, this focus will have no effect"
  SOV_taiwan_coop_check_tt: "Our actions will bring us closer to a §Yfuture deal§! for the §Gpurchase§! of [TAI.GetFlag]§YTaiwanese§! microprocessor technology"
@@ -4452,19 +4452,19 @@
  sov_kasyanov.1.d: "In the context of Russia's democratic transformation and the desire for peace, the Russian government took the bold step of granting Chechnya formal independence.\n\nAfter long negotiations and diplomatic efforts, both sides agreed to this historic compromise. Russia recognized Chechnya's right to independence, opening a new page in relations between the two entities. This act became a symbol of the desire for peace and dialog in a region previously plagued by tensions and hostilities."
  sov_kasyanov.1.a: "Establish diplomatic relations"
 
- sov_kasyanov.2.t: "Question of ownership of the Kuril Islands"
+ sov_kasyanov.2.t: "Question of ownership of the South Kuril Islands"
  sov_kasyanov.2.d: "After the Second World War, all the Kuril Islands were included in the USSR and in the future Russia, but the ownership of the islands of Iturup, Kunashir, Shikotan and the Habomai group of islands is disputed by us, we consider and considered them to be an occupied part of the country. Today, Russia has initiated negotiations with us on this issue. What will be our response?"
- sov_kasyanov.2.a: "The Kurils have always been Japanese"
+ sov_kasyanov.2.a: "The South Kurils have always been Japanese"
  sov_kasyanov.2.b: "All right, let them take them"
 
- sov_kasyanov.3.t: "The Japanese refused to withdraw their claims to the Kurils"
- sov_kasyanov.3.d: "Recently, there have been talks between us and Japan. Their outcome is as follows: the Japanese do not change their position and still consider the Kurils to be their territory."
+ sov_kasyanov.3.t: "The Japanese refused to withdraw their claims to the South Kurils"
+ sov_kasyanov.3.d: "Recently, there have been talks between us and Japan. Their outcome is as follows: the Japanese do not change their position and still consider the South Kurils to be their territory."
  sov_kasyanov.3.a: "Okay, we won't hold the Kurils by force, we'll give them away!"
  sov_kasyanov.3.b: "To hell with them."
  sov_kasyanov.3.c: "They'll pay for it"
 
- sov_kasyanov.4.t: "The Japanese have agreed to no longer claim the Kurils"
- sov_kasyanov.4.d: "Recently, there have been talks between us and Japan. They agreed to withdraw their claims from the Kurils."
+ sov_kasyanov.4.t: "The Japanese have agreed to no longer claim the South Kurils"
+ sov_kasyanov.4.d: "Recently, there have been talks between us and Japan. They agreed to withdraw their claims from the South Kurils."
  sov_kasyanov.4.a: "We always knew the Japanese were good people"
 
  sov_kasyanov.5.t: "[FROM.GetNameWithFlag] invites us into an alliance"
