--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -2374,6 +2374,7 @@
  VICTORY_POINTS_6179: "Uonuma"
  VICTORY_POINTS_9859: "Mutsu"
  VICTORY_POINTS_10444: "Sapporo"
+ VICTORY_POINTS_14897: "Izu"
  VICTORY_POINTS_4576: "Wakkanai"
  VICTORY_POINTS_12421: "Furano"
  VICTORY_POINTS_4646: "Abashiri"
