--- a/localisation/simp_chinese/MD_ideas_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_ideas_l_simp_chinese.yml
@@ -3,7 +3,7 @@
  minority_government: "少数党政府"
  minority_government_desc: "我们的政府目前是一个少数派政府，这使得所有的政治行动都非常困难。"
  international_sanctions: "国际制裁"
- international_sanctions_desc: "我们受到国际社会的经济制裁"
+ international_sanctions_desc: "我们受到国际社会的经济制裁。"
  p5_member: "联合国安理会常任理事国"
  p5_member_desc: "联合国安理会的常任理事国，也被称为“五大常任理事国”或“五常”，包括以下五国政府：中国、法国、俄罗斯、英国和美国，即公认的二战五大战胜国。每个常任理事国都拥有一票否决权，可以拒绝通过任何“重大”的安理会决议草案，无论国际社会对该草案的支持程度如何。"
  g7_member: "七国集团成员国"
