--- a/localisation/simp_chinese/MD_techs_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_techs_l_simp_chinese.yml
@@ -4022,7 +4022,7 @@
  a_divergence_in_doctrine: "理论的分歧"
  a_divergence_in_doctrine_desc: "多数海军都遵循绿水或蓝水海军理论的原则，他们可以在沿海之外进行力量投射。转向这种更轻、更灵活的设计，将使我们能够分化并可能应对这种更严酷的战斗方式。"
  size_doesnt_matter: "大小无关紧要"
- size_doesnt_matter_desc: "重要的不是狗有多大，而是狗有多能打。"
+ size_doesnt_matter_desc: "重要的不是狗的身板尺寸，重要的是狗心中斗志的多少。"
  juryrigged_submarines: "临时潜艇"
  juryrigged_submarines_desc: "如果我们花一些时间削减成本，临时拼凑我们的潜艇的部件，我们可能实际上能够生产更多的潜艇来增加我们的海军力量。"
  conscript_navy: "应征海军"
