--- a/localisation/simp_chinese/victory_points_l_simp_chinese.yml
+++ b/localisation/simp_chinese/victory_points_l_simp_chinese.yml
@@ -2204,7 +2204,6 @@
  VICTORY_POINTS_1158: "佐世保"
  VICTORY_POINTS_1020: "宫崎"
  VICTORY_POINTS_4027: "大分"
- VICTORY_POINTS_4164: "久留米"
  VICTORY_POINTS_4179: "松山"
  VICTORY_POINTS_4094: "高松"
  VICTORY_POINTS_7997: "高知"
@@ -2232,7 +2231,7 @@
  VICTORY_POINTS_7157: "富士"
  VICTORY_POINTS_993: "宇都宫"
  VICTORY_POINTS_4100: "筑波"
- VICTORY_POINTS_1097: "前桥"
+ VICTORY_POINTS_1097: "埼玉"
  VICTORY_POINTS_12072: "甲府"
  VICTORY_POINTS_7016: "水户"
  VICTORY_POINTS_1182: "东京"
@@ -2241,12 +2240,12 @@
  VICTORY_POINTS_1024: "郡山"
  VICTORY_POINTS_1117: "新潟"
  VICTORY_POINTS_6188: "仙台"
- VICTORY_POINTS_1063: "秋田"
+ VICTORY_POINTS_1063: "由利本庄"
  VICTORY_POINTS_6994: "青森"
  VICTORY_POINTS_4118: "岩城"
  VICTORY_POINTS_4153: "福岛"
  VICTORY_POINTS_12007: "长冈"
- VICTORY_POINTS_4067: "山形"
+ VICTORY_POINTS_4067: "鹤冈"
  VICTORY_POINTS_9807: "盛冈"
  VICTORY_POINTS_9859: "陆奥"
  VICTORY_POINTS_10444: "札幌"
@@ -2721,7 +2720,6 @@
  VICTORY_POINTS_10540: "埃文斯克"
  VICTORY_POINTS_12207: "利斯科耶"
  VICTORY_POINTS_6383: "普罗维杰尼亚"
- VICTORY_POINTS_13037: "南库里尔斯克"
  VICTORY_POINTS_1399: "北库里尔斯克"
  VICTORY_POINTS_12446: "南萨哈林斯克"
  VICTORY_POINTS_855: "奥卡"
@@ -4304,7 +4302,7 @@
  VICTORY_POINTS_14519: "老街"
  VICTORY_POINTS_670: "马加斯"
  VICTORY_POINTS_10793: "巴古拜"
- VICTORY_POINTS_11240: "萨玛沃"
+ VICTORY_POINTS_11240: "塞马沃"
  VICTORY_POINTS_14655: "札波利亚尔尼"
  VICTORY_POINTS_11187: "迪瓦尼耶"
  VICTORY_POINTS_14678: "萨卜泽瓦尔"
@@ -4359,3 +4357,44 @@
  VICTORY_POINTS_14850: "都兰"
  VICTORY_POINTS_14836: "杰内"
  VICTORY_POINTS_14743: "昭苏"
+ VICTORY_POINTS_14857: "久留米"
+ VICTORY_POINTS_14858: "五岛"
+ VICTORY_POINTS_10124: "名护"
+ VICTORY_POINTS_13281: "石垣"
+ VICTORY_POINTS_10128: "富山"
+ VICTORY_POINTS_10100: "松本"
+ VICTORY_POINTS_6172: "敦贺"
+ VICTORY_POINTS_7187: "中津川"
+ VICTORY_POINTS_4000: "前桥"
+ VICTORY_POINTS_4184: "木更津"
+ VICTORY_POINTS_6166: "丰桥"
+ VICTORY_POINTS_14868: "新庄"
+ VICTORY_POINTS_7169: "石卷"
+ VICTORY_POINTS_6870: "宫古"
+ VICTORY_POINTS_14879: "山形"
+ VICTORY_POINTS_6193: "秋田"
+ VICTORY_POINTS_14862: "八户"
+ VICTORY_POINTS_14871: "相马"
+ VICTORY_POINTS_11847: "久慈"
+ VICTORY_POINTS_11989: "饭山"
+ VICTORY_POINTS_6179: "鱼沼"
+ VICTORY_POINTS_4576: "稚内"
+ VICTORY_POINTS_12421: "富良野"
+ VICTORY_POINTS_4646: "网走"
+ VICTORY_POINTS_7595: "北见"
+ VICTORY_POINTS_14884: "根室"
+ VICTORY_POINTS_14893: "天草"
+ VICTORY_POINTS_14853: "国后"
+ VICTORY_POINTS_14854: "择捉"
+ VICTORY_POINTS_12006: "八代"
+ VICTORY_POINTS_10052: "岩国"
+ VICTORY_POINTS_6168: "神户"
+ VICTORY_POINTS_4069: "饭田"
+ VICTORY_POINTS_11908: "高崎"
+ VICTORY_POINTS_1067: "大津"
+ VICTORY_POINTS_1051: "奈良"
+ VICTORY_POINTS_12032: "鹿屋"
+ VICTORY_POINTS_4198: "西之表"
+ VICTORY_POINTS_1123: "奄美"
+ VICTORY_POINTS_7197: "高知"
+ VICTORY_POINTS_14897: "伊豆"
