--- a/Changelog.txt
+++ b/Changelog.txt
@@ -90,9 +90,11 @@ v1.10.0
   - Revamp Somalia region
   - Revamp Quebec and Greenland
   - Revamp Western Africa
+  - Revamp Japan
   - Adjustment in Afghanistan
   - Adjustment in Taiwan Strait
   - Add Guardafui Channel
+  - Separate Kuril isles to two part
   - Grant a navy base for Lithuania
   - Add Alaska railway
   - Minor adjustment
