--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -4408,3 +4408,4 @@
  VICTORY_POINTS_10826: "Asadabad"
  VICTORY_POINTS_14614: "Gorgan"
  VICTORY_POINTS_14683: "Parun"
+ VICTORY_POINTS_13026: "Minami Torishima"
