Small adjustment of China

--- a/localisation/english/MD_focus_CHI_l_english.yml
+++ b/localisation/english/MD_focus_CHI_l_english.yml
@@ -310,6 +310,8 @@
  CHI_Support_the_Non_Aligned_Coalition_desc: "China's place is not to pick sides in a world increasingly becoming divided between the West and those who wish to over-turn the existing international order. Instead, we should look to our own interests and seek good relations with both sides."
  CHI_Sina_Weibo: "Sina Weibo"
  CHI_Sina_Weibo_desc: "Sina Weibo shall be our counterpart to the social media platforms of the West. Through it we can exert a degree of influence over the online interactions of our citizens."
+ CHI_QQ: "QQ"
+ CHI_QQ_desc: "An autonomous and controllable instant messaging software is very necessary, and it can also meet the needs of people to communicate with each other."
  CHI_WeChat: "WeChat"
  CHI_WeChat_desc: "WeChat is the social software with the most active users in mainland China. It is very important to keep WeChat under our control."
  CHI_Bilibili: "Bilibili"
@@ -1233,7 +1235,7 @@
  china.64.a: "Congratulations, Commander. The Chinese people will never forget your achievements."
  
  china.65.t: "Bilibili online"
- china.65.d: "Bilibili , nicknamed B Site, is a video-sharing website based in Shanghai where users can submit, view, and add overlaid commentary on videos. Bilibili hosts videos on various themes, including anime, music, dance, science and technology, movies, drama, fashion, and video games, but it is also known for its extensive kuso-style parodies by subcultural content creators. \nBilibili is known for its scrolling danmu commenting system. \nBilibili also provides a live streaming service where the audience can interact with streamers. "
+ china.65.d: "Bilibili , nicknamed B Site, is a video-sharing website based in Shanghai where users can submit, view, and add overlaid commentary on videos. Bilibili hosts videos on various themes, including anime, music, dance, science and technology, movies, drama, fashion, and video games, but it is also known for its extensive kuso-style parodies by subcultural content creators. \n\nBilibili is known for its scrolling danmu commenting system. \n\nBilibili also provides a live streaming service where the audience can interact with streamers. "
  china.65.a: "What you love is your life."
  
  china_news.1.t: "19th National Congress of the Communist Party of China"
