tweak aug's change

--- a/localisation/english/MD_ideas_l_english.yml
+++ b/localisation/english/MD_ideas_l_english.yml
@@ -210,6 +210,8 @@
  CHI_PLA_Business_Ventures2_desc: "At the direction of the government, members of the PLA are closing their profitable enterprises and strictly focusing on their military duties."
  one_child_policy: "One-Child Policy"
  one_child_policy_desc: "Conceived of as a way to limit China’s population growth, the one-child policy is a controversial and ambitious attempt by the Chinese government to control the size of the Chinese population. While the exact extent to which the policy has put a brake on population growth is disputed, the substantial effects of the policy on Chinese society are undeniable."
+ two_child_policy: "Two-Child Policy"
+ two_child_policy_desc: "After nearly thirty decades of the one-child policy, China is experiencing a decline in birth rates. To swiftly address this trend and return birth rates to normal levels, the Chinese government intends to loosen the birth restrictions policy a bit."
  factional_politics_balanced: "Factional Politics - Balanced"
  factional_politics_balanced_desc: "The power struggle between populists who hail from the rural provinces and elitists from the more urban, built-up areas of China has died down and members of both sides agree that compromise is the best way forward to secure China’s future."
  factional_politics_populist: "Factional Politics - Youth League Dominance"
