National Decisions Overhaul 1
* Redid National Wellbeing
* Fixed may missing and broken things in Greenland's National Focus
* Began adding unique names
* Hopefully nerfed resources effect on national productivity

--- a/localisation/english/MD_focus_GRN_l_english.yml
+++ b/localisation/english/MD_focus_GRN_l_english.yml
@@ -121,88 +121,92 @@
  #######################
 
  #Western
- greenland.Western_Autocracy: "£GRN_Western_Autocracy_small Demokraatit"
- greenland.Western_Autocracy_desc: "Pro-western autocracy refers to a broad spectrum of non-democratic, authoritarian ideologies that are aligned with the geopolitical interests of the Western Hemisphere."
- greenland.Western_Autocracy_icon: "£GRN_Western_Autocracy_small"
+ GRN.Western_Autocracy: "£GRN_Western_Autocracy_small Demokraatit"
+ GRN.Western_Autocracy_desc: ""
+ GRN.Western_Autocracy_icon: "£GRN_Western_Autocracy_small"
 
- greenland.conservatism: "£GRN_conservatism_small Atassut"
- greenland.conservatism_desc: "Conservatism refers to a broad spectrum of moderate right-wing ideologies espousing the importance of traditional culture, unity, and a stable way of life. Conservatives tend to oppose state intervention in social and economic affairs, and often believe less regulation will result in greater social mobility for the populace."
- greenland.conservatism_icon: "£GRN_conservatism_small"
+ GRN.conservatism: "£GRN_conservatism_small Atassut"
+ GRN.conservatism_desc: ""
+ GRN.conservatism_icon: "£GRN_conservatism_small"
 
- greenland.liberalism: "£GRN_liberalism_small Siumut"
- greenland.liberalism_desc: "Liberalism is a centrist ideology that promotes the rights of the individual and stresses freedom over the expansion of state power. Liberals tend to support progressive social policies within the framework of a free market with free trade with the rest of the world."
- greenland.liberalism_icon: "£GRN_liberalism_small"
+ GRN.liberalism: "£GRN_liberalism_small Siumut"
+ GRN.liberalism_desc: ""
+ GRN.liberalism_icon: "£GRN_liberalism_small"
 
- greenland.socialism: "£GRN_socialism_small Inuit Ataqatigiit"
- greenland.socialism_desc: "Social democracy refers to a broad spectrum of left-wing ideologies espousing economic and social justice to a greater extent than most branches of liberalism. Social democrats seek to humanize capitalism to curb inequality, oppression, and foster democracy."
- greenland.socialism_icon: "£GRN_socialism_small"
+ GRN.socialism: "£GRN_socialism_small Inuit Ataqatigiit"
+ GRN.socialism_desc: ""
+ GRN.socialism_icon: "£GRN_socialism_small"
 
  #Emerging
- greenland.Communist-State: "£GRN_Communist_State_small Communists"
- greenland.Communist-State_desc: "Communism broadly refers to an ideology espousing the end of the capitalist system to create a communal worker’s paradise. In reality, communist nations retain capitalistic economic systems and are often non-democratic in nature."
- greenland.Communist-State_icon: "£GRN_Communist_State_small"
+ GRN.Communist-State: "£GRN_Communist_State_small Communists"
+ GRN.Communist-State_desc: ""
+ GRN.Communist-State_icon: "£GRN_Communist_State_small"
 
- greenland.anarchist_communism: "£GRN_anarchist_communism_small Left-Wing Radicals"
- greenland.anarchist_communism_desc: "Left-wing radicalism is a broad spectrum of far-left ideology that typically espouses the end of capitalism and globalization. While some may support armed resistance, many see themselves as simply ‘more left’ than social democrats and are accepting of liberal democracy."
- greenland.anarchist_communism_icon: "£GRN_anarchist_communism_small"
+ GRN.anarchist_communism: "£GRN_anarchist_communism_small Left-Wing Radicals"
+ GRN.anarchist_communism_desc: ""
+ GRN.anarchist_communism_icon: "£GRN_anarchist_communism_small"
 
- greenland.Conservative: "£GRN_Conservative_small Kattusseqatigiit"
- greenland.Conservative_desc: "Reactionaries refer to a broad spectrum of far-right ideologies whose aims go further than moderate conservatives. Reactionaries typically believe in an idealized version of the past and seek to restore a nation's former glory through revanchist and irredentist ideology and an aggressive military policy."
- greenland.Conservative_icon: "£GRN_Conservative_small"
+ GRN.Conservative: "£GRN_Conservative_small Kattusseqatigiit"
+ GRN.Conservative_desc: ""
+ GRN.Conservative_icon: "£GRN_Conservative_small"
 
- greenland.Autocracy: "£GRN_Autocracy_small Autocrats"
- greenland.Autocracy_desc: "Autocracy refers to a broad spectrum of non-democratic, authoritarian political systems where a single ruler or group of privileged elites control all political power."
- greenland.Autocracy_icon: "£GRN_Autocracy_small"
+ GRN.Autocracy: "£GRN_Autocracy_small Autocrats"
+ GRN.Autocracy_desc: ""
+ GRN.Autocracy_icon: "£GRN_Autocracy_small"
 
  #Non-aligned
- greenland.Neutral_Muslim_Brotherhood: "£muslim_brotherhood_small Moderate Islamists"
- greenland.Neutral_Muslim_Brotherhood_icon: "£muslim_brotherhood_small"
- greenland.Neutral_Muslim_Brotherhood_desc: "Moderate Islamism refers to a broad spectrum of Islamic political movements seeking to establish a democratic state within the confines of Islamic law."
+ GRN.Neutral_Muslim_Brotherhood: "£muslim_brotherhood_small Moderate Islamists"
+ GRN.Neutral_Muslim_Brotherhood_icon: "£muslim_brotherhood_small"
+ GRN.Neutral_Muslim_Brotherhood_desc: ""
 
- greenland.Neutral_Autocracy: "£GRN_Neutral_Autocracy_small Non-Aligned Autocrats"
- greenland.Neutral_Autocracy_icon: "£GRN_Neutral_Autocracy_small"
- greenland.Neutral_Autocracy_desc: "Autocracy refers to a broad spectrum of non-democratic, authoritarian ideologies where all power is placed in the hands of a single ruler."
+ GRN.Neutral_Autocracy: "£GRN_Neutral_Autocracy_small Non-Aligned Autocrats"
+ GRN.Neutral_Autocracy_icon: "£GRN_Neutral_Autocracy_small"
+ GRN.Neutral_Autocracy_desc: ""
 
- greenland.Neutral_conservatism: "£GRN_Neutral_conservatism_small Conservatives"
- greenland.Neutral_conservatism_icon: "£GRN_Neutral_conservatism_small"
- greenland.Neutral_conservatism_desc: "Conservatism refers to a broad spectrum of moderate right-wing ideologies espousing the importance of traditional culture, unity, and a stable way of life. Conservatives tend to oppose state intervention in social and economic affairs, and often believe less regulation will result in greater social mobility for the populace."
+ GRN.Neutral_conservatism: "£GRN_Neutral_conservatism_small Conservatives"
+ GRN.Neutral_conservatism_icon: "£GRN_Neutral_conservatism_small"
+ GRN.Neutral_conservatism_desc: ""
 
- greenland.oligarchism: "£GRN_oligarchism_small Oligarchs"
- greenland.oligarchism_icon: "£GRN_oligarchism_small"
- greenland.oligarchism_desc: "Oligarchy refers to a power structure in which control is placed in the hands of a select group of political and economic elites. Oligarchies are typically non-democratic and authoritarian in nature."
+ GRN.oligarchism: "£GRN_oligarchism_small Oligarchs"
+ GRN.oligarchism_icon: "£GRN_oligarchism_small"
+ GRN.oligarchism_desc: ""
 
- greenland.Neutral_Libertarian: "£GRN_Neutral_Libertarian_small Nunatta Qitornai"
- greenland.Neutral_Libertarian_icon: "£GRN_Neutral_Libertarian_small"
- greenland.Neutral_Libertarian_desc: "Libertarianism refers to a broad range of political ideologies and movements espousing liberty as a core principle. Libertarians typically support limited government intervention in all aspects of social, political and economic life to a greater extent than conservatives."
+ GRN.Neutral_Libertarian: "£GRN_Neutral_Libertarian_small Nunatta Qitornai"
+ GRN.Neutral_Libertarian_icon: "£GRN_Neutral_Libertarian_small"
+ GRN.Neutral_Libertarian_desc: ""
 
- greenland.Neutral_green: "£GRN_Neutral_green_small Greens"
- greenland.Neutral_green_icon: "£GRN_Neutral_green_small"
- greenland.Neutral_green_desc: "Green politics or ecopolitics refer to a broad spectrum of left-wing movements espousing nonviolence, social justice, direct democracy and environmentalism."
+ GRN.Neutral_green: "£GRN_Neutral_green_small Greens"
+ GRN.Neutral_green_icon: "£GRN_Neutral_green_small"
+ GRN.Neutral_green_desc: ""
 
- greenland.neutral_Social: "£GRN_neutral_Social_small Naleraq and Partii Inuit"
- greenland.neutral_Social_icon: "£GRN_neutral_Social_small"
- greenland.neutral_Social_desc: "Socialist democrat ideology refers to left-wing ideologies espousing economic and social justice. While working within the framework of capitalism, they seek heavy redistribution of wealth to curb inequality. They promote the welfare state and to impose more regulation over private business."
+ GRN.neutral_Social: "£GRN_neutral_Social_small Partii Inuit"
+ GRN.neutral_Social_icon: "£GRN_neutral_Social_small"
+ GRN.neutral_Social_desc: ""
 
- greenland.Neutral_Communism: "£GRN_Neutral_Communism_small Communists"
- greenland.Neutral_Communism_icon: "£GRN_Neutral_Communism_small"
- greenland.Neutral_Communism_desc: "Communism broadly refers to an ideology espousing the end of the capitalist system to create a communal worker’s paradise. In reality, communist nations retain capitalistic economic systems and are often non-democratic in nature."
+ GRN.neutral_Social_2017: "£GRN_neutral_Social_small_2017 Naleraq"
+ GRN.neutral_Social_icon_2017: "£GRN_neutral_Social_small_2017"
+ GRN.neutral_Social_desc_2017: ""
+
+ GRN.Neutral_Communism: "£GRN_Neutral_Communism_small Communists"
+ GRN.Neutral_Communism_icon: "£GRN_Neutral_Communism_small"
+ GRN.Neutral_Communism_desc: ""
 
  #nationalist
- greenland.Nat_Populism: "£GRN_Nat_Populism_small Right Wing Populists"
- greenland.Nat_Populism_icon: "£GRN_Nat_Populism_small"
- greenland.Nat_Populism_desc: "Right-wing populism refers to a specific branch of populist ideology that seeks to empower the people against perceived elites that control society. Right-wing populists typically support anti-globalization, protectionism, nativism, nationalism, and an opposition to immigration."
+ GRN.Nat_Populism: "£GRN_Nat_Populism_small Right Wing Populists"
+ GRN.Nat_Populism_icon: "£GRN_Nat_Populism_small"
+ GRN.Nat_Populism_desc: ""
 
- greenland.Nat_Fascism: "£GRN_Nat_Fascism_small Fascists"
- greenland.Nat_Fascism_icon: "£GRN_Nat_Fascism_small"
- greenland.Nat_Fascism_desc: "Fascism is a form of authoritarian ultra-nationalism espoused in militaristic overtones. Fascism seeks to establish a one-party state headed by a single leader wielding absolute authority, and supports violence and aggressive expansionism to foster national rejuvenation."
+ GRN.Nat_Fascism: "£GRN_Nat_Fascism_small Fascists"
+ GRN.Nat_Fascism_icon: "£GRN_Nat_Fascism_small"
+ GRN.Nat_Fascism_desc: ""
 
- greenland.Nat_Autocracy: "£GRN_Nat_Autocracy_small Armed Forces of Greenland"
- greenland.Nat_Autocracy_icon: "£GRN_Nat_Autocracy_small"
- greenland.Nat_Autocracy_desc: "Military juntas refer to governments led by a committee of military leaders. Military juntas are often non-democratic and authoritarian in nature, and can in a very broad sense be considered a form of military dictatorship or stratocracy."
+ GRN.Nat_Autocracy: "£GRN_Nat_Autocracy_small Armed Forces of Greenland"
+ GRN.Nat_Autocracy_icon: "£GRN_Nat_Autocracy_small"
+ GRN.Nat_Autocracy_desc: ""
 
- greenland.Monarchist: "£DEN_Monarchist_small Danish Crown"
- greenland.Monarchist_icon: "£GRN_Monarchist_small"
- greenland.Monarchist_desc: "A movement of national self-suppression and advocacy for the reigning of the Danish Crown across it's commonweath realms."
+ GRN.Monarchist: "£DEN_Monarchist_small House of Glücksburg"
+ GRN.Monarchist_icon: "£GRN_Monarchist_small"
+ GRN.Monarchist_desc: "A movement of national self-suppression and advocacy for the reigning of the Danish Crown across it's commonweath realms."
  
  #Western_Autocracy - Demokraatit
  #conservatism - Atassut
@@ -244,10 +248,10 @@
  GRN_Military_Budget_Reevaluation_desc:0 "We need to have our budget revaluated, becouse then we'll be able to do things like; producing more equipment, strengtening the army, or ecen increasing capticy of our landforces"
  
  GRN_Strenghten_Sirius_Patrol:0 "Expand Sirsus Dog Sled Patrol"
- GRN_Strenghten_Sirius_Patrol_desc:0 " The goal of Sirsus dog sled patrol is to monitor the country so our enemies don't do things won't be able to stay detected for time that they would want to. If we expanded Frederik André Henrik Christian's control over the patrol we could get Danish support and even theie investments into it."
+ GRN_Strenghten_Sirius_Patrol_desc:0 "The goal of Sirsus dog sled patrol is to monitor the country so our enemies don't do things won't be able to stay detected for time that they would want to. If we expanded Frederik André Henrik Christian's control over the patrol we could get Danish support and even theie investments into it."
 
  GRN_Strenghten_the_Danish_Garrison:0 "Expand the Danish Garrison"
- GRN_Strenghten_the_Danish_Garrison_desc:0 "Danish garrison is the only thing that could protect our nation after they have secured the sea. Expanding it is needed in order to protect our nation against our enemies"
+ GRN_Strenghten_the_Danish_Garrison_desc:0 ""
  
  GRN_Our_first_Military_University:0 "Our First Military University"
  GRN_Our_first_Military_University_desc:0 "It's pretty clear that modern, strong, and powerful army needs to have educated general staff and our recruit we need to have create military university "
